css fix for windows scrollbar

--- a/src/components/balance-checker/balance-checker.module.scss
+++ b/src/components/balance-checker/balance-checker.module.scss
@@ -7,7 +7,8 @@
 
 .tableWrapper {
   max-height: 500px;
-  overflow: scroll;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .table {
